# bid_system_app

./: .env.prod.example  .gitignore  AGENTS.md  BID_ANALYSIS_GUIDE.md  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml  manage.sh
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-02-07_add_bid_documents_table.py  2026-02-07_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  assistant.py  bid_analysis.py  prompts.py
backend/app/agents/tools/: __init__.py  datetime_tool.py
backend/app/api/: deps.py  exception_handlers.py  router.py  versioning.py
backend/app/api/routes/: __init__.py
backend/app/api/routes/v1/: __init__.py  agent.py  auth.py  bid_documents.py  health.py  items.py  users.py
backend/app/commands/: __init__.py  cleanup.py  example.py  seed.py
backend/app/core/: __init__.py  config.py  csrf.py  exceptions.py  logfire_setup.py  middleware.py  sanitize.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  bid_document.py  item.py  user.py
backend/app/pipelines/: __init__.py  base.py
backend/app/repositories/: __init__.py  base.py  bid_document.py  item.py  user.py
backend/app/schemas/: __init__.py  base.py  bid_document.py  item.py  token.py  user.py
backend/app/services/: __init__.py  bid_document.py  item.py  user.py
backend/cli/: __init__.py  commands.py
backend/tests/: conftest.py  test_admin.py  test_agents.py  test_commands.py  test_core.py  test_pipelines.py  test_repositories.py  test_security.py  test_services.py
backend/tests/api/: test_auth.py  test_exceptions.py  test_health.py  test_items.py  test_metrics.py  test_users.py
docs/: adding_features.md  architecture.md  patterns.md  testing.md
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  instrumentation.ts  (+6 more)
(+68 files in other folders)
